@@ -317,6 +317,10 @@ public:
    void append(const TCHAR *str) { if (str != NULL) append(str, _tcslen(str)); }
 	void append(const TCHAR *str, size_t len);
    void append(const TCHAR c) { append(&c, 1); }
+   void append(INT32 n);
+   void append(UINT32 n);
+   void append(INT64 n);
+   void append(UINT64 n);
 
 	void appendPreallocated(TCHAR *str) { if (str != NULL) { append(str); free(str); } }
 
